--- a/ProjetosAulas/CSS3/projetoCSS3-basico/PaginaModelo/html/campanhas.html
+++ b/ProjetosAulas/CSS3/projetoCSS3-basico/PaginaModelo/html/campanhas.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="principal">
 			<img src="imagensHTML/capa.png">
-			<div id="menu">
+			<div class="menu">
 				<a href="home.html"> HOME </a> | <a href="biografia.html"> BIOGRAFIA </a> | <a href="campanhas.html"> CAMPANHAS </a> | <a href="contato.html"> CONTATO </a>
 			</div>
 
